--- a/ch31_outils.qmd
+++ b/ch31_outils.qmd
@@ -61,7 +61,7 @@ $$\mathbb{E}[e^{itX^2}] = \frac{1}{\sqrt{1 - 2it}}. $$
 Soient maintenant $X_1,\dotsc, X_n$ des variables de loi $N(0,1)$ indépendantes. Chaque $X_i^2$ est une $\chi_2(1)$ ; leur somme a pour loi la convolée $n$ fois de $\chi_2(1)$. Calculons sa tranformée de Fourier : 
 \begin{align}\mathbb{E}[e^{it(X_1^2 + \dotsb + X_n^2)}] &= \mathbb{E}[e^{itX_1^2}]^n \\ &= (1-2it)^{-\frac{n}{2}} .\end{align}
 On reconnaît la transformée de Fourier d'une loi $\Gamma(n/2, 1/2)$ ; cette loi s'appelle *loi du chi-deux à $n$ paramètres de liberté* et elle est notée $\chi_2(n)$. Sa densité est donnée par
-$$ \frac{1}{2^{n/2}\Gamma(n/2)}e^{-x/2}x^{n/2 - 1}\mathbf{1}_{x>0}.$$
+$$ \frac{1}{2^{n/2}\Gamma(n/2)}e^{-x/2}x^{n/2 - 1}\mathbf{1}_{x>0}.$${#eq-chideuxdensity}
 
 ### Loi de Student {#sec-student1}
 
@@ -152,14 +152,21 @@ La démonstration se fonde sur le lemme suivant.
 
 ## lemme de Hoeffding
 
-Soit $X$ une variable aléatoire centrée à valeurs dans $[a,b]$. Pour tout $t$, 
+Soit $X$ une variable aléatoire à valeurs dans $[a,b]$. Pour tout $t$, 
 
-$$\mathbb{E}[e^{tX}] \leqslant e^{\frac{t^2(b-a)^2}{8}}.$$
+$$\mathbb{E}[e^{t(X-\mathbb{E}[X]}] \leqslant e^{\frac{t^2(b-a)^2}{8}}.$${#eq-lemme_hoeffding}
 
 :::
 
 :::{.proof}
-Soit $X$ une variable aléatoire centrée à valeurs dans l'intervalle $[-1,1]$. En écrivant $x = (-1)\times (1-x)/2 + 1\times (1+x)/2$ et en utilisant la convexité de la fonction $x \mapsto e^{tx}$, on obtient $e^{tX}\leqslant ((1-X)e^{-t} + (1+X) e^{t})/2$, puis en prenant l'espérance et le fait que $X$ est centrée, $\mathbb{E}[e^{tX}]\leqslant \cosh(t)$. Il est facile de voir que $\cosh(t) \leqslant e^{t^2/2}$ en utilisant le développement en série entière de $\cosh$.  Le cas général où $X$ est à valeurs dans $[a,b]$ se fait de la même façon. 
+Soit $X$ une variable aléatoire, que par simplicité on supposera centrée et à valeurs dans l'intervalle $[a,b]$ ($a$ est forcément négatif). En écrivant 
+$$x = a\times \frac{b-x}{b-a} + b\times \left(1 - \frac{b-x}{b-a}\right)$$
+ et en utilisant la convexité de la fonction $x \mapsto e^{tx}$, on obtient $e^{tX}\leqslant (b-X)e^{ta}/(b-a) + (1 - (b-x)/(b-a)) e^{bt})$, puis en prenant l'espérance et le fait que $X$ est centrée et en simplifiant, 
+ $$\mathbb{E}[e^{tX}]\leqslant \frac{be^{ta} - ae^{tb}}{b-a}.$$ Notons $f(t)$ le terme à droite ; pour montrer @eq-lemme_hoeffding, il suffit de montrer que $\ln f(t) \leqslant t^2(b-a)^2/8$. La formule de Taylor dit que 
+ $$ \ln f(t) = \ln f(0) + t (\ln f)'(0) + \frac{t^2}{2}(\ln f)''(\xi)$$
+ pour un certain $\xi$. Or, $\ln f(0) = \ln 1 = 0$, $(\ln f)'(0) = f'(0)/f(0) = 0$, et il suffit donc de montrer que $(\ln f)''(t)$ est toujours plus petit que $(b-a)^2/4$ pour conclure. Un simple calcul montre que $\ln f(t) = \ln(b/(b-a)) + ta + \ln(1 - ae^{t(b-a)} / b)$, et donc
+ $$ (\ln f)''(t) = \frac{(a/b)(b-a)e^{t(b-a)}}{(1 - ae^{t(b-a)}/b)^2}.$$
+ L'inégalité $uv/(u-v)^2 \leqslant 1/4$ appliquée à $u = a/b$ et $v = e^{t(b-a)}$ permet alors de conclure. 
 :::
 
 
@@ -168,3 +175,7 @@ En remplaçant $X_k$ par $X_k - \mathbb{E}[X_k]$, on peut supposer que tous les 
 Écrivons $\mathbb{P}(S_n > t) = \mathbb{P}(e^{\lambda S_n} > e^{\lambda t})$, où $\lambda$ est un nombre positif que l'on choisira plus tard. L'inégalité de Markov borne cette probabilité par $\mathbb{E}[e^{\lambda S_n}]e^{-\lambda t}$. Comme les $X_i$ sont indépendantes, $\mathbb{E}[e^{tS_n}]$ est le produit des $e^{ \varphi_k(\lambda)}$ où $\varphi_k(t) = \ln \mathbb{E}[e^{itX_k}]$. En appliquant le lemme de Hoeffding à chaque $\varphi_k$, on borne $\mathbb{P}(S_n >t)$ par 
 $$ \exp\left(\sum_{i=1}^n \frac{(b_i - a_i)^2 \lambda^2}{8} - t\lambda\right).$$
 Le minimum en $\lambda$ du terme dans l'exponentielle est atteint au point $4t / \sum (a_i - b_i)^2$ et la valeur du minimum est le terme dans l'exponentielle de @eq-hoeffding. On déduit @eq-hoeffdingsym par une simple borne de l'union.  
+
+
+
+La démonstration de l'inégalité de Hoeffding ne dépend pas directement du fait que $X$ est bornée, mais plutôt de @eq-lemme_hoeffding. Toutes les variables aléatoires qui vérifient une inégalité de type $\mathbb{E}[e^{tX}]\leqslant e^{c t^2}$ pour une constante $c$ peuvent donc avoir leur propre inégalité de Hoeffding. 
