--- a/ch4.qmd
+++ b/ch4.qmd
@@ -20,7 +20,7 @@ Un test est un événement qui, s'il survient, nous incite à rejeter l'hypothè
 - L'erreur de seconde espèce est la probabilité de ne pas rejeter l'hypothèse nulle, à tort : $\beta = \sup_{\theta \in H_1}P_\theta(\accept)$. La **puissance d'un test** est $1-\beta$. C'est la probabilité de « détecter » l'hypothèse alternative à raison. 
 :::
 
-Par « événement », on veut bien dire « un élément de $\mathscr{F}$ », c'est-à-dire qui n'est déterminé que par les observations et pas par $\theta$. 
+Par « événement », on veut bien dire « un élément de $\mathscr{F}$ », c'est-à-dire qui n'est déterminé que par les observations et pas par $\theta$. Formellement on écrit souvent qu'un test est une statistique, disons $T$, à valeurs dans $\{0,1\}$. L'événement $\{T=0\}$ est $\rejet$, l'événement $\{T=1\}$ est $\accept$.
 
 Un des grands objectifs de la statistique mathématique est de construire des familles de tests qui, pour un niveau de confiance $1-\alpha$ fixé, ont la plus grande puissance possible ; autrement dit, **trouver un événement hautement improbable sous l'hypothèse nulle, et hautement probable sous l'hypothèse alternative**. 
 
@@ -42,10 +42,10 @@ On cherche à réfuter l'hypothèse selon laquelle ces variables aléatoires son
 
 **Supposons dans un premier temps que $\sigma^2$ est connue.** Sous $H_0$, on a donc 
 $$ \frac{\sqrt{n}\bar{X}_n}{\sigma} \sim N(0,1)$$
-et par conséquent, $P_0(|\bar{X}_n| < z_\alpha \sigma / \sqrt{n}) = 1-\alpha$. Autrement dit, sous l'hypothèse $\mu = 0$, on devrait observer l'événement 
-$$ \bar{X}_n \in \left[ \pm \frac{z_\alpha \sigma}{\sqrt{n}}\right]$$
+et par conséquent, $P_0(|\bar{X}_n| < z_{1-\alpha} \sigma / \sqrt{n}) = 1-\alpha$. Autrement dit, sous l'hypothèse $\mu = 0$, on devrait observer l'événement 
+$$ \bar{X}_n \in \left[ \pm \frac{z_{1-\alpha} \sigma}{\sqrt{n}}\right]$$
 avec probabilité élevée $1-\alpha$. Si cet événement n'est pas observé, il est alors très douteux que $\mu$ soit effectivement égal à zéro ! On pose donc 
-$$ \rejet_\alpha = \{|\bar{X}_n | > z_\alpha \sigma / \sqrt{n}\}.$$
+$$ \rejet_\alpha = \{|\bar{X}_n | > z_{1-\alpha} \sigma / \sqrt{n}\}.$$
 Le niveau de ce test est bien $1-\alpha$ : nous l'avons construit pour cela. 
 
 **Supposons maintenant que $\sigma$ n'est pas connue.** En l'estimant via $\hat{\sigma}_n$, nous savons que (toujours sous l'hypothèse selon laquelle $\mu=0$)
@@ -59,19 +59,19 @@ est bien un test de niveau $1-\alpha$.
 Nous n'avons pas encore eu besoin de spécifier une hypothèse alternative, mais nous allons en avoir besoin pour calculer la puissance du test. Pour commencer, on va supposer que, si $\mu$ n'est pas nulle, alors elle ne peut être égale qu'à 1. Autrement dit, $H_1 = \{1\}$. Ce genre d'hypothèse alternative ne peut évidemment avoir de pertinence qu'en fonction du problème réel sous-jacent !
 
 Sous l'hypothèse alternative, donc, nous savons que $\bar{X}_n \sim N(1, \sigma^2)$. La puissance du test est définie par $1-\beta$ où $\beta=P_1(\accept_\alpha)$ c'est-à-dire 
-\begin{align}\beta &= P_1(|\bar{X}_n|\leqslant z_\alpha \sigma / \sqrt{n}) \\
-&= P_1 \left(-\frac{z_\alpha \sigma}{\sqrt{n}}\leqslant \bar{X}_n \leqslant \frac{z_\alpha \sigma}{\sqrt{n}} \right) \\
-&= P_1 \left(-\frac{z_\alpha \sigma}{\sqrt{n}}-1\leqslant \bar{X}_n - 1 \leqslant \frac{z_\alpha \sigma}{\sqrt{n}} -1 \right)\\
-&= \Phi(-\sqrt{n}/\sigma + z_\alpha) - \Phi(-\sqrt{n}/\sigma + z_\alpha).
+\begin{align}\beta &= P_1(|\bar{X}_n|\leqslant z_{1-\alpha} \sigma / \sqrt{n}) \\
+&= P_1 \left(-\frac{z_{1-\alpha} \sigma}{\sqrt{n}}\leqslant \bar{X}_n \leqslant \frac{z_{1-\alpha} \sigma}{\sqrt{n}} \right) \\
+&= P_1 \left(-\frac{z_{1-\alpha} \sigma}{\sqrt{n}}-1\leqslant \bar{X}_n - 1 \leqslant \frac{z_{1-\alpha} \sigma}{\sqrt{n}} -1 \right)\\
+&= \Phi(-\sqrt{n}/\sigma + z_{1-\alpha}) - \Phi(-\sqrt{n}/\sigma + z_{1-\alpha}).
 \end{align}
 où $\Phi(x) = \mathbb{P}(N(0,1)\leqslant x)$.
-Cette expression ne peut pas plus se simplifier, mais on peut quand même la borner par $F(-\sqrt{n}/\sigma + z_\alpha)$. Lorsque $x$ est grand, nous avons vu (@thm-gaussiantail) que $F(x) < e^{-x^2}/|x|\sqrt{2\pi}$. Ainsi, l'erreur de première espèce est bornée par $O(e^{-n/\sigma^2/2} / \sqrt{n})$. Cela tend extrêmement vite vers 0 ; en fait, dès que $n$ est plus grand que 10 et $\sigma=1$, cette erreur est inférieure à 0.1%, donc dans ce cas le test aura une puissance supérieure à $99.9\%$. 
+Cette expression ne peut pas plus se simplifier, mais on peut quand même la borner par $F(-\sqrt{n}/\sigma + z_{1-\alpha})$. Lorsque $x$ est grand, nous avons vu (@thm-gaussiantail) que $F(x) < e^{-x^2}/|x|\sqrt{2\pi}$. Ainsi, l'erreur de première espèce est bornée par $O(e^{-n/\sigma^2/2} / \sqrt{n})$. Cela tend extrêmement vite vers 0 ; en fait, dès que $n$ est plus grand que 10 et $\sigma=1$, cette erreur est inférieure à 0.1%, donc dans ce cas le test aura une puissance supérieure à $99.9\%$. 
 
-Que se serait-il passé si notre hypothèse alternative n'avait pas été $\mu=1$ mais $\mu = m$ pour n'importe quel $m\neq 0$ ? Dans ce cas, on aurait eu $H_1 = \mathbb{R}\setminus \{0\}$. L'erreur de première espèce aurait alors été $\beta = \sum_{m\neq 0}\beta_m $ où
+Que se serait-il passé si notre hypothèse alternative n'avait pas été $\mu=1$ mais $\mu = m$ pour n'importe quel $m\neq 0$ ? Dans ce cas, on aurait eu $H_1 = \mathbb{R}\setminus \{0\}$. L'erreur de première espèce aurait alors été $\beta = \sup_{m\neq 0}\beta_m$ où
 $$ \beta_m = P_m(\accept_\alpha).$$
 On revoyant les calculs ci-dessus, on voit que 
-$$\beta_m = \Phi(-m\sqrt{n}/\sigma + z_\alpha) - \Phi(-m\sqrt{n}/\sigma + z_\alpha).$$
-Il est évident $\lim_{m\to 0}\beta_m =1$, par continuité de $\Phi$. Ainsi, $\beta=1$ et $1-\beta = 0$ : pour cette seconde hypothèse alternative, la puissance de notre test… est nulle. 
+$$\beta_m = \Phi(-m\sqrt{n}/\sigma + z_{1-\alpha}) - \Phi(-m\sqrt{n}/\sigma + z_{1-\alpha}).$$
+En particulier, $$\lim_{m\to 0}\beta_m =\Phi(-z_{1-\alpha}) - \Phi(-z_{1-\alpha}) =  1-\alpha$$ par continuité de $\Phi$ et par définition de $z_{1-\alpha}$. Ainsi, $1-\beta = \alpha$ : pour cette seconde hypothèse alternative, la puissance de notre test… est extrêmement faible. 
 
 **Cela vient du fait que notre hypothèse alternative contient des situations quasiment indiscernables de notre hypothèse nulle.** Par exemple, il est quasiment impossible de distinguer $\mu = 0$ de $\mu = 10^{-100}$ par exemple. Cet exemple illustre la dissymétrie entre $H_0$ et $H_1$. 
 
